# cmu15462CG

./: README.md
p1/: .ycm_extra_conf.py  README  writeup.txt
p1/src/: CMakeLists.txt
p1/src/SDLmain/: CMakeLists.txt
p1/src/application/: CMakeLists.txt  application.cpp  opengl.hpp
p1/src/math/: .camera.cpp.swp  CMakeLists.txt  matrix.cpp  vector.hpp
p1/src/p1/: CMakeLists.txt  main.cpp  project.cpp  project.hpp
p1/src/scene/: CMakeLists.txt  heightmap.cpp  heightmap.hpp  mesh.cpp  mesh.hpp
p2/: README
p2/cubemaps/: Thumbs.db
p2/cubemaps/stpet/: Thumbs.db
p2/cubemaps/teide/: Thumbs.db
p2/scenes/: bunny.scene  cube.scene  cube2.scene  open_cube.scene  stegosaurus.scene  teapot.scene  teapot2.scene  torus.scene
p2/shaders/: example_frag.glsl  example_vert.glsl  material_frag.glsl  material_vert.glsl  normal_frag.glsl  normal_vert.glsl
p2/src/: ._CMakeLists.txt  CMakeLists.txt
p2/src/SDLMain/: ._CMakeLists.txt  CMakeLists.txt
p2/src/application/: CMakeLists.txt  application.cpp  application.hpp  camera_roam.cpp  imageio.cpp  opengl.hpp  scene_loader.cpp
p2/src/math/: ._matrix.cpp  CMakeLists.txt  color.hpp  matrix.cpp  matrix.hpp  vector.hpp
p2/src/p2/: ._CMakeLists.txt  CMakeLists.txt  cubemap.cpp  cubemap.hpp  framebuffer.cpp  framebuffer.hpp  main.cpp  project.cpp  project.hpp  shader.cpp  shader.hpp
p2/src/scene/: CMakeLists.txt  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp  sphere.cpp  subdivide.cpp  subdivide.h  triangle.cpp
